crates/monospace-diagram/src/snapshots/gallery/monospace_diagram__gallery__the_order_decides_a_shared_cell.snap
---
source: crates/monospace-diagram/src/gallery.rs
description: "A gallery: a chosen set of examples, one block each, for reading rather than for coverage. Each label lists the shapes in the order they were added, each one derived from its own Debug, so a label cannot disagree with the values it names; what was done between two drawings of one diagram is the second line, and it is named for the change rather than for the order, which 080 could make and a displacement does not. It is written by hand, because a diagram offers one query by an identity and no listing of the shapes it holds. Under each picture is the surface that picture came from: a count of the positions the diagram wrote, then a row for each of them, saying what that position renders, what each of its four arms holds, and the base stroke every Set arm is drawn in. A Set arm names the stroke; Unset and Closed are the model's own two words for the other two. A position left unwritten is a hole in the picture rather than a row here, and the count is how many there are. A literal has no arms, so its arm columns are empty. A block moving means a figure or an order changed, and what moved is the thing to look at — the same acceptance a characterization gets, without its claim of covering a range."
expression: body
---
  shapes: [small_box(0,0,fill=░), small_box(2,1,fill=▓)]
  change: as written
  ┌──┐
  │░┌┴─┐
  └─┤▓▓│
    └──┘
  wrote 20 of 24 positions
  | at  | glyph | top    | right  | bottom | left   | base  |
  | --- | ----- | ------ | ------ | ------ | ------ | ----- |
  | 0,0 | ┌     | Unset  | light  | light  | Unset  | light |
  | 1,0 | ─     | Unset  | light  | Closed | light  | light |
  | 2,0 | ─     | Unset  | light  | Closed | light  | light |
  | 3,0 | ┐     | Unset  | Unset  | light  | light  | light |
  | 0,1 | │     | light  | Closed | light  | Unset  | light |
  | 1,1 | ░     |        |        |        |        |       |
  | 2,1 | ┌     | Closed | light  | light  | Closed | light |
  | 3,1 | ┴     | light  | light  | Closed | light  | light |
  | 4,1 | ─     | Unset  | light  | Closed | light  | light |
  | 5,1 | ┐     | Unset  | Unset  | light  | light  | light |
  | 0,2 | └     | light  | light  | Unset  | Unset  | light |
  | 1,2 | ─     | Closed | light  | Unset  | light  | light |
  | 2,2 | ┤     | light  | Closed | light  | light  | light |
  | 3,2 | ▓     |        |        |        |        |       |
  | 4,2 | ▓     |        |        |        |        |       |
  | 5,2 | │     | light  | Unset  | light  | Closed | light |
  | 2,3 | └     | light  | light  | Unset  | Unset  | light |
  | 3,3 | ─     | Closed | light  | Unset  | light  | light |
  | 4,3 | ─     | Closed | light  | Unset  | light  | light |
  | 5,3 | ┘     | light  | Unset  | Unset  | light  | light |

  shapes: [small_box(0,0,fill=░), small_box(2,1,fill=▓)]
  change: 1 moved one place toward the front
  ┌──┐
  │░░├─┐
  └─┬┘▓│
    └──┘
  wrote 20 of 24 positions
  | at  | glyph | top    | right  | bottom | left   | base  |
  | --- | ----- | ------ | ------ | ------ | ------ | ----- |
  | 0,0 | ┌     | Unset  | light  | light  | Unset  | light |
  | 1,0 | ─     | Unset  | light  | Closed | light  | light |
  | 2,0 | ─     | Unset  | light  | Closed | light  | light |
  | 3,0 | ┐     | Unset  | Unset  | light  | light  | light |
  | 0,1 | │     | light  | Closed | light  | Unset  | light |
  | 1,1 | ░     |        |        |        |        |       |
  | 2,1 | ░     |        |        |        |        |       |
  | 3,1 | ├     | light  | light  | light  | Closed | light |
  | 4,1 | ─     | Unset  | light  | Closed | light  | light |
  | 5,1 | ┐     | Unset  | Unset  | light  | light  | light |
  | 0,2 | └     | light  | light  | Unset  | Unset  | light |
  | 1,2 | ─     | Closed | light  | Unset  | light  | light |
  | 2,2 | ┬     | Closed | light  | light  | light  | light |
  | 3,2 | ┘     | light  | Closed | Closed | light  | light |
  | 4,2 | ▓     |        |        |        |        |       |
  | 5,2 | │     | light  | Unset  | light  | Closed | light |
  | 2,3 | └     | light  | light  | Unset  | Unset  | light |
  | 3,3 | ─     | Closed | light  | Unset  | light  | light |
  | 4,3 | ─     | Closed | light  | Unset  | light  | light |
  | 5,3 | ┘     | light  | Unset  | Unset  | light  | light |
